--- a/styles.scss
+++ b/styles.scss
@@ -68,7 +68,10 @@ header{
 .heading--font{
     font-family: 'Shrikhand', sans-serif;
     text-align: center;
-    height: 30px;
+    font-size: 34px;
+    height: 25px;
+    margin: 0;
+    padding-bottom: 22px;
 }
 
 
@@ -84,7 +87,7 @@ header{
 }
 
 .heading--search input{
-    width: 120px;
+    width: 140px;
     background-color: #EAEAEA;
     border: none;
     padding: 5px;
@@ -117,7 +120,7 @@ header{
 }
 
 #heading__explore button{
-    font-weight: bold;
+    font-size: 15px;
     color: white;
     background: linear-gradient($secondary-color, $primary-color);
     border: 0;
@@ -136,6 +139,7 @@ header{
 
 #section1{
     height: 280px;
+    padding-bottom: 10px;
 }
 
 #section1 h2{
@@ -187,7 +191,7 @@ header{
 
 #section2{
     background-color: $background-color;
-    padding-bottom: 30px;
+    padding-bottom: 45px;
 }
 
 #section2 h2{
@@ -266,7 +270,7 @@ a{
 
 footer{
     color: white;
-    background-color: black;
+    background-color: #353535;
     padding-top: 5px;
     padding-bottom: 20px;
 }
@@ -310,13 +314,13 @@ footer a:hover{
 
 #menu__header{
     line-height: 0px;
-    height: 55px;
-    padding-top: 10px;
+    height: 30px;
+    padding-top: 23px;
 }
 
 #header__icon{
     position: relative;
-    top: 25px;
+    top: 4px;
 }
 
 .menu__head{
@@ -406,7 +410,7 @@ footer a:hover{
 }
 
 .price{
-    padding-right: 10px;
+    padding-right: 20px;
     position: relative;
     top: 13px;
     transition: transform 1s;
@@ -502,9 +506,10 @@ footer a:hover{
     display: flex;
     justify-content: center;
     position: relative;
-    bottom: 50px;
+    bottom: 35px;
+    padding-bottom: 45px;
     & button{
-        font-weight: bold;
+        font-size: 15px;
         color: white;
         background: linear-gradient($secondary-color, $primary-color);
         border: 0;
