--- a/styles.css
+++ b/styles.css
@@ -391,7 +391,9 @@ footer a:hover {
   width: 25%;
 }
 .plats__element:hover .fa-circle-check {
+  display: visible;
   transform: rotate(360deg);
+  transition: all 0.5s 0.2s;
 }
 .plats__element:hover .price {
   transform: translate(-5px, 0px);
@@ -416,7 +418,7 @@ footer a:hover {
   position: relative;
   left: 30px;
   top: 20px;
-  transition: transform 0.5s 0.2s;
+  transition: display 0.5s;
 }
 
 .right {
@@ -542,8 +544,16 @@ footer a:hover {
   h2 {
     padding-left: 80px;
   }
+  #section1 {
+    display: flex;
+    height: 200px;
+  }
   .section1__element {
-    width: 40%;
+    position: relative;
+    top: 100px;
+    right: 90px;
+    margin-right: 30px;
+    width: 30%;
   }
   #section2__alignement {
     width: 100%;
