--- a/styles.scss
+++ b/styles.scss
@@ -402,9 +402,11 @@ footer a:hover{
     cursor: pointer;
     overflow: hidden;
     &:hover .check{
-        width: 25%;}
+        width: 25%;}   
     &:hover .fa-circle-check{
-        transform: rotate(360deg);}
+        display: visible;
+        transform: rotate(360deg);
+        transition: all 0.5s 0.2s; }
     &:hover .price{
         transform: translate(-5px, 0px);}
 }
@@ -428,7 +430,7 @@ footer a:hover{
     position: relative;
     left: 30px;
     top: 20px;
-    transition: transform 0.5s 0.2s;
+    transition: display 0.5s;
 }
 
 .right{
@@ -546,8 +548,17 @@ footer a:hover{
         padding-left: 80px;
     }
 
+    #section1{
+        display: flex;
+        height: 200px;
+    }
+
     .section1__element{
-        width: 40%;
+        position: relative;
+        top: 100px;
+        right: 90px;
+        margin-right: 30px;
+        width: 30%;
     }
 
     #section2__alignement{
