--- a/styles.css
+++ b/styles.css
@@ -401,6 +401,7 @@ footer a:hover {
 
 .price {
   padding-right: 20px;
+  padding-left: 5px;
   position: relative;
   top: 13px;
   transition: transform 1s;
@@ -604,4 +605,4 @@ footer a:hover {
   .heart {
     left: 480px;
   }
-}/*# sourceMappingURL=styles.css.map */
+}
