--- a/styles.scss
+++ b/styles.scss
@@ -24,8 +24,8 @@ footer{
 /* Loading spinner */
 
 @keyframes load{
-    from {opacity: 1;}
-    to {opacity: 0; display: none; z-index: -100;} }
+    0% {opacity: 1;}
+    100% {opacity: 0; display: none; z-index: -10;} }
   
   #loading{
     width: 100%;
@@ -41,7 +41,7 @@ footer{
  
   @keyframes spin {
     0% {transform: rotate(0deg); opacity: 1;}
-    100% {transform: rotate(360deg); opacity: 0;} } 
+    80% {transform: rotate(360deg); opacity: 0;}}
   
   #spinner{
     border: 16px solid gainsboro;
@@ -53,7 +53,7 @@ footer{
     left: 45%;
     top: 45%;
     animation-name: spin;
-    animation-duration: 1s;
+    animation-duration: 3s;
     animation-timing-function: linear;
     animation-iteration-count: infinite;
   }
@@ -226,7 +226,7 @@ header{
     padding: 5px;
     text-align: center;
     position: relative;
-    left: 310px;
+    left: 60%;
     bottom: 280px;
     line-height: normal;
 }
@@ -243,7 +243,7 @@ a{
 .heart{
     position: relative;
     width: 50px;
-    left: 370px;
+    left: 70%;
     bottom: 45px;
 }
 
@@ -407,11 +407,13 @@ footer a:hover{
         transform: rotate(360deg);
         transition: all 0.5s 0.2s; }
     &:hover .price{
+        padding-right: 15px;
         transform: translate(-5px, 0px);}
 }
 
 .price{
     padding-right: 20px;
+    padding-left: 6px;
     position: relative;
     top: 13px;
     transition: transform 1s;
@@ -618,13 +620,11 @@ footer a:hover{
         width: 70%;
     }
 
-    .section2__element__label{
-        left: 390px;
-    }
-
-    .heart{
-        left: 480px;
-    }
-
-    
 }
+
+@media screen and (max-width: 480px)
+{    .plats__element{
+        &:hover .check{
+            width: 35%;}
+        }  
+}   
