--- a/styles.css
+++ b/styles.css
@@ -15,10 +15,10 @@ footer {
 
 /* Loading spinner */
 @keyframes load {
-  0% {
+  from {
     opacity: 1;
   }
-  100% {
+  to {
     opacity: 0;
     display: none;
     z-index: -10;
