--- a/styles.scss
+++ b/styles.scss
@@ -198,6 +198,10 @@ header{
     padding-top: 30px;
 }
 
+.section2__titre{
+    padding-left: 20px;
+}
+
 .section2__element{
     background-color: white;
     width: 90%;
@@ -226,7 +230,7 @@ header{
     padding: 5px;
     text-align: center;
     position: relative;
-    left: 60%;
+    left: 65%;
     bottom: 280px;
     line-height: normal;
 }
@@ -243,7 +247,7 @@ a{
 .heart{
     position: relative;
     width: 50px;
-    left: 70%;
+    left: 80%;
     bottom: 45px;
 }
 
@@ -606,6 +610,8 @@ footer a:hover{
 
 }
 
+/* Responsive design: taille tablette */
+
 @media screen and (min-width:769px) and (max-width:992px)
 {
     #heading__explore{
@@ -619,11 +625,18 @@ footer a:hover{
     .section2__element{
         width: 70%;
     }
-
 }
 
+/* Responsive design: écran plus petit */
+
 @media screen and (max-width: 480px)
-{    .plats__element{
+{   .section2__element__label{
+    left: 60%;}
+    
+    .heart{
+    left: 85%;} 
+    
+    .plats__element{
         &:hover .check{
             width: 35%;}
         }  
