--- a/styles.css
+++ b/styles.css
@@ -616,4 +616,17 @@ footer a:hover {
   .plats__element:hover .check {
     width: 35%;
   }
+}
+@media screen and (max-width: 380px) {
+  .menu__head__element h2 {
+    width: 70%;
+  }
+  #text__overflow__menu3 {
+    position: relative;
+    bottom: 70px;
+  }
+  .plats {
+    position: relative;
+    bottom: 30px;
+  }
 }/*# sourceMappingURL=styles.css.map */
