--- a/styles.scss
+++ b/styles.scss
@@ -131,6 +131,10 @@ header{
     padding-right: 20px;
     margin-top: 10px;
     cursor: pointer;
+    &:hover{
+        background: linear-gradient(#ff79d9d0, #AA64FF);
+        box-shadow: 4px 4px 4px darkgray;
+    }
 }
 
 
@@ -527,6 +531,10 @@ footer a:hover{
         padding-left: 20px;
         padding-right: 20px;
         cursor: pointer;
+        &:hover{
+            background: linear-gradient(#ff79d9d0, #AA64FF);
+            box-shadow: 4px 4px 4px darkgray;
+        }
     }
 }
 
