--- a/styles.scss
+++ b/styles.scss
@@ -137,8 +137,6 @@ header{
     }
 }
 
-
-
 /* Section Fonctionnement */
 
 #section1{
@@ -234,8 +232,8 @@ header{
     padding: 5px;
     text-align: center;
     position: relative;
-    left: 65%;
-    bottom: 280px;
+    left: 72%;
+    bottom: 230px;
     line-height: normal;
 }
 
@@ -250,29 +248,58 @@ a{
 
 .heart{
     position: relative;
-    width: 50px;
-    left: 80%;
+    width: 25px;
+    height: 25px;
+    left: 86%;
+    bottom: 72px;
+}
+
+.heart2{
+    position: relative;
+    width: 25px;
+    height: 25px;
+    left: 86%;
     bottom: 45px;
 }
 
-.full_heart{
-    width: 30px;
+.heart_empty{
+    font-size: 26px;
+    opacity: 1;
+    transition: opacity 0.5s;
+}
+
+.heart_full {
+    font-size: 26px;
     position: relative;
-    bottom: 25px;
-    opacity: 0;   
+    bottom: 26px;
+    opacity: 0;
+    color: transparent;
     background: white;
     transition: opacity 1s, background 2s;
-}
-
-.empty_heart{
-    width: 30px;
-}
-
-.heart:hover .full_heart{
-    background: linear-gradient(#9356DC, #FF79DA);
+    cursor: pointer;
+  }
+  
+  .heart:hover .heart_full{
     opacity: 1;
-}
+    color: transparent;
+    background: linear-gradient($primary-color, $secondary-color);
+    -webkit-background-clip: text;
+    background-clip: text;
+    }
+    
+  .heart:hover .heart_empty{
+    opacity: 0;}
 
+ .heart2:hover .heart_full{
+    opacity: 1;
+    color: transparent;
+    background: linear-gradient($primary-color, $secondary-color);
+    -webkit-background-clip: text;
+    background-clip: text;
+    }
+        
+  .heart2:hover .heart_empty{
+    opacity: 0;}
 
 /* Footer */
 
@@ -351,29 +378,41 @@ footer a:hover{
 }
 
 .menu__heart{
+    width: 35px;
+    height: 35px;
     position: relative;
     right: 10px;
-    top: 20px;
     cursor: pointer;
 }
 
-.empty_heart2{
-    width: 31px;
+.menu_heart_empty{
+    font-size: 30px;
+    opacity: 1;
+    transition: opacity 0.5s;
 }
 
-.full_heart2{
-    width: 31px;
+.menu_heart_full {
+    font-size: 30px;
     position: relative;
     bottom: 34px;
-    opacity: 0;   
+    opacity: 0;
+    color: transparent;
     background: white;
     transition: opacity 1s, background 2s;
+    cursor: pointer;
 }
-
-.menu__heart:hover .full_heart2{
-    background: linear-gradient(#9356DC, #FF79DA);
+  
+.menu__heart:hover .menu_heart_full{
     opacity: 1;
+    color: transparent;
+    background: linear-gradient($primary-color, $secondary-color);
+    -webkit-background-clip: text;
+    background-clip: text;
 }
+    
+.menu__heart:hover .menu_heart_empty{
+    opacity: 0;}
+    
 
 /* Page MENU Entrées/plats/desserts */
 
@@ -633,6 +672,8 @@ footer a:hover{
     .section2__element{
         width: 70%;
     }
+
+    
 }
 
 /* Responsive design: écran plus petit */
@@ -647,8 +688,10 @@ footer a:hover{
     .plats__element{
         &:hover .check{
             width: 35%;}
-        }  
-}
+    }  
+
+
+}   
 
 @media screen and (max-width: 380px) {
     .menu__head__element h2{
@@ -664,5 +707,10 @@ footer a:hover{
       position: relative;
       bottom: 30px;
     }
+
+    #menu_button{
+        position: relative;
+        top: 5px;
+        padding-bottom: 60px;}
   
   }
