--- a/styles.css
+++ b/styles.css
@@ -148,14 +148,14 @@ header {
   font-weight: bold;
   background-color: #F6F6F6;
   border-radius: 10px;
-  box-shadow: 3px 3px 3px gainsboro;
+  box-shadow: 6px 6px 6px rgba(220, 220, 220, 0.872);
   width: 80%;
   height: 60px;
   margin-right: auto;
   margin-left: auto;
   display: flex;
   align-items: center;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 
 .section1__element:hover {
