--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -157,6 +157,7 @@ html input[type=button],
 input[type=reset],
 input[type=submit] {
     -webkit-appearance: button;
+    appearance: button;
     cursor: pointer
 }
 
@@ -192,12 +193,14 @@ input[type=search] {
     -webkit-box-sizing: content-box;
     -moz-box-sizing: content-box;
     box-sizing: content-box;
-    -webkit-appearance: textfield
+    -webkit-appearance: textfield;
+    appearance: textfield;
 }
 
 input[type=search]::-webkit-search-cancel-button,
 input[type=search]::-webkit-search-decoration {
-    -webkit-appearance: none
+    -webkit-appearance: none;
+    appearance: none;
 }
 
 fieldset {
@@ -3193,7 +3196,8 @@ textarea.form-control {
 }
 
 input[type=search] {
-    -webkit-appearance: none
+    -webkit-appearance: none;
+    appearance: none;
 }
 
 @media screen and (-webkit-min-device-pixel-ratio:0) {
@@ -7058,6 +7062,7 @@ button.list-group-item-danger.active:hover {
 
 button.close {
     -webkit-appearance: none;
+    appearance: none;
     padding: 0;
     cursor: pointer;
     background: 0 0;
